[metadata]
name = anishot
home-page = https://github.com/sourcerer-io/anishot
summary = Animate a long screenshot
description-file = 
    README.md
author = sourcerer-io
author-email = sergey@sourcerer.io
license = MIT
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    anishot

[extras]
devel=
    pbr
    tox
    bandit

[entry_points]
console_scripts =
    anishot = anishot.__main__:main

[wheel]
universal = 1
